<resources>

    <!--    General-->
    <string name="app_name">Carpe Diem</string>
    <string name="quoteTitle">Quote</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="clear">Clear Search</string>

    <!--    Favorites-->
    <string name="favorites">Favorites</string>
    <string name="such_emptiness">Wow… such emptiness. Start adding quotes to have them show up in your favorites list</string>

    <!--    Main - top rated quotes-->
    <string name="top_rated_quote">Top Rated Quotes</string>
    <string name="rating">Rating:</string>
    <string name="error_top_rated_quotes">Awww… snap! An error occurred while fetching the quotes from the server. Please try again later!</string>
    <string name="no_quotes_found">No quotes found by that author. Perhaps try another author?</string>

    <!--    Quote Detail-->
    <string name="quote_detail_error_sharing">"An error occurred while retrieving this quote"</string>
    <string name="down_vote_snack">Rating reduced by -1</string>
    <string name="up_vote_snack">Rating increased by +1</string>

    <!--    Settings-->
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="changes_saved">Changes have been saved</string>

    <!--    About-->
    <string name="about">About</string>
    <string name="about_text_primary">Carpe Diem is a Latin aphorism translated as SEIZE THE DAY!</string>
    <string name="about_text_secondary">Use the motivation in these daily quotes to seize the day and bring the best in you!</string>

    <!--    Notifications-->
    <string name="notification_channel_name">Receive Carpe Diems</string>
    <string name="notification_channel_description">This channel allows you to receive Carpe Diems</string>
    <string name="receive_push_notifications">Receive Push Notifications?</string>
    <string name="daily">Once a day</string>
    <string name="weekly">Once a week</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="how_often">How often do you want to receive notifications?</string>
    <string name="when">When do you want to receive a notification?</string>

    <!--    Login-->
    <string name="login_title">Login using your favorite social media</string>
    <string name="logout">Log Out</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>

    <!--    Do not translate-->
    <string name="quote_notification_channel_id" translatable="false">quote_notification_channel_id</string>
    <string name="lorem_ipsum_short" translatable="false">Lorem ipsum</string>
    <string name="lorem_ipsum_long" translatable="false">Maecenas vehicula eros sem, quis tristique ipsum condimentum vitae. Pellentesque in molestie tortor. Ut congue congue neque at consectetu</string>
    <string name="shared_preferences" translatable="false">shared_preferences</string>
    <string name="notification" translatable="false">notification</string>
    <string name="frequency" translatable="false">frequency</string>
    <string name="time" translatable="false">time</string>
    <string name="notification_on_off" translatable="false">notifications_on_off</string>
    <string name="com_auth0_client_id" translatable="false">L7fxON1cWygS6CmawN6GaWGUJnVXML7B</string>
    <string name="com_auth0_domain" translatable="false">dev-4lwkohbg.us.auth0.com</string>

</resources>
