<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@+id/nav_graph"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/home_dest">

    <fragment
        android:id="@+id/home_dest"
        android:name="com.alanford.carpediem.quotelist.QuoteListFragment"
        android:label="@string/top_rated_quote"
        tools:layout="@layout/quote_list">
        <action
            android:id="@+id/action_quoteListFragment_to_quoteFragment"
            app:destination="@id/quoteDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/quoteDetailFragment"
        android:name="com.alanford.carpediem.quotedetails.QuoteDetailFragment"
        android:label="@string/quoteTitle"
        tools:layout="@layout/quote_detail">
        <argument
            android:name="quote"
            app:argType="com.alanford.carpediem.data.Quote" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.alanford.carpediem.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/about_layout" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.alanford.carpediem.favorites.FavoritesFragment"
        tools:layout="@layout/favorites_layout"
        android:label="@string/favorites" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.alanford.carpediem.settings.SettingsFragment"
        tools:layout="@layout/settings_layout"
        android:label="@string/settings" />

    <activity
        android:id="@+id/mainActivity"
        android:name="com.alanford.carpediem.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
</navigation>