<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_row_height">

    <TextView
        android:id="@+id/quote_author"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_row_primary_text_height"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:gravity="bottom"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/lorem_ipsum_short" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_row_secondary_text_height"
        android:layout_marginEnd="@dimen/margin_xx_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/rating"
        android:textColor="@color/secondary_text"
        app:layout_constraintEnd_toStartOf="@+id/rating"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_row_secondary_text_height"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/lorem_ipsum_short">

    </TextView>

    <TextView
        android:id="@+id/quote_text"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quote_author"
        tools:text="@string/lorem_ipsum_long" />

</androidx.constraintlayout.widget.ConstraintLayout>