<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/notification_on_off_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium_large"
            android:text="@string/receive_push_notifications" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_medium_large"
            android:layout_marginStart="@dimen/margin_medium_large"
            android:text="@string/when"
            android:textSize="@dimen/text_size_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium_large"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <FrameLayout
                    android:id="@+id/once_a_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/once_a_day_check"
                        android:layout_width="@dimen/icon_small"
                        android:layout_height="@dimen/icon_small"
                        android:layout_gravity="end|top"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_baseline_check_circle_24"
                        android:visibility="gone"
                        app:tint="@color/primary">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/ic_one"
                        android:gravity="center"
                        android:text="@string/daily"
                        android:textSize="@dimen/text_size_large" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <FrameLayout
                    android:id="@+id/once_a_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/once_a_week_check"
                        android:layout_width="@dimen/icon_small"
                        android:layout_height="@dimen/icon_small"
                        android:layout_gravity="end|top"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_baseline_check_circle_24"
                        android:visibility="gone"
                        app:tint="@color/primary">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_seven"
                        android:gravity="center"
                        android:text="@string/weekly"
                        android:textSize="@dimen/text_size_large" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_medium_large"
            android:layout_marginStart="@dimen/margin_medium_large"
            android:text="@string/how_often"
            android:textSize="@dimen/text_size_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <FrameLayout
                    android:id="@+id/morning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/morning_check"
                        android:layout_width="@dimen/icon_small"
                        android:layout_height="@dimen/icon_small"
                        android:layout_gravity="end|top"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_baseline_check_circle_24"
                        android:visibility="gone"
                        app:tint="@color/primary">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/ic_morning"
                        android:gravity="center"
                        android:text="@string/morning"
                        android:textSize="@dimen/text_size_large" />
                </FrameLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <FrameLayout
                    android:id="@+id/evening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/evening_check"
                        android:layout_width="@dimen/icon_small"
                        android:layout_height="@dimen/icon_small"
                        android:layout_gravity="end|top"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_baseline_check_circle_24"
                        android:visibility="gone"
                        app:tint="@color/primary">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_night_landscape"
                        android:gravity="center"
                        android:text="@string/evening"
                        android:textSize="@dimen/text_size_large" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>







    </LinearLayout>
</ScrollView>
